RESOLVED FIXED210585
[IPC hardening] DrawingArea::updateBackingStoreState() is not used on Apple platforms
https://bugs.webkit.org/show_bug.cgi?id=210585
Summary [IPC hardening] DrawingArea::updateBackingStoreState() is not used on Apple p...
David Kilzer (:ddkilzer)
Reported 2020-04-15 18:42:36 PDT
DrawingArea::updateBackingStoreState() is not used on Apple platforms. <rdar://problem/61802011>
Attachments
Patch v1 (4.71 KB, patch)
2020-04-15 19:01 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2020-04-15 19:01:40 PDT
Created attachment 396603 [details] Patch v1
Geoffrey Garen
Comment 2 2020-04-15 19:12:30 PDT
Comment on attachment 396603 [details] Patch v1 r=me
EWS
Comment 3 2020-04-16 04:39:50 PDT
Committed r260177: <https://trac.webkit.org/changeset/260177> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396603 [details].
Note You need to log in before you can comment on or make changes to this bug.