[IPC hardening] DrawingArea::updateBackingStoreState() is not used on Apple platforms <https://webkit.org/b/210585> <rdar://problem/61802011>

Reviewed by Geoffrey Garen.

* UIProcess/DrawingAreaProxy.h:
* UIProcess/DrawingAreaProxy.messages.in:
* WebProcess/WebPage/DrawingArea.h:
(WebKit::DrawingArea::updateBackingStoreState):
* WebProcess/WebPage/DrawingArea.messages.in:
- Use USE(COORDINATED_GRAPHICS) || USE(TEXTURE_MAPPER) to
  protect code not used on Apple platforms.


Canonical link: https://commits.webkit.org/223463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260177 268f45cc-cd09-0410-ab3c-d52691b4dbfc