Source/WebKit/WebProcess/WebPage/DrawingArea.h
@@ -170,8 +170,10 @@ private:
 
     // Message handlers.
     // FIXME: These should be pure virtual.
-    virtual void updateBackingStoreState(uint64_t /*backingStoreStateID*/, bool /*respondImmediately*/, float /*deviceScaleFactor*/, const WebCore::IntSize& /*size*/, 
+#if USE(COORDINATED_GRAPHICS) || USE(TEXTURE_MAPPER)
+    virtual void updateBackingStoreState(uint64_t /*backingStoreStateID*/, bool /*respondImmediately*/, float /*deviceScaleFactor*/, const WebCore::IntSize& /*size*/,
                                          const WebCore::IntSize& /*scrollOffset*/) { }
+#endif
     virtual void didUpdate() { }
 
 #if PLATFORM(COCOA)
